--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
             crossorigin="anonymous">
         </script>
-        <script type="text/javascript" src="js/index.js"></script>
+
     </head>
     <body>
+        <script type="text/javascript" src="js/site.js"></script>
         <div id='header'>
           <h1 id='headtext'>the site of sanju ashok</h1>
           <div id="links">
