--- a/index.html
+++ b/index.html
@@ -7,15 +7,33 @@
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
             crossorigin="anonymous">
         </script>
-
+        <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+        <script type="text/javascript" src="js/site.js"></script>
     </head>
     <body>
-        <script type="text/javascript" src="js/site.js"></script>
         <div id='header'>
-          <h1 id='headtext'>the site of sanju ashok</h1>
-          <div id="links">
-            <a href="http://www.twitter.com/sanjuashok">twitter<a/>|<a href="http://www.instagram.com/sanjuashok">instagram<a/>|<a href="http://www.github.com/sanjuashok">github<a/>|<a href="http://www.soundcloud.com/sanjuashok">soundcloud<a/>|<a href="http://blog.sanju.io">blog<a/>|<a href="mail:me@sanju.io">email me<a/>
-          </div>
+            <h1 id='headtext'>the site of sanju ashok</h1>
+            <div id="links">
+                <a href="www.twitter.com/sanjuashok">twitter<a/>|<a href="www.instagram.com/sanjuashok">instagram<a/>|<a href="www.github.com/sanjuashok">github<a/>|<a href="www.soundcloud.com/sanjuashok">soundcloud<a/>|<a href="http://blog.sanju.io">blog<a/>|<a href="mail:me@sanju.io">email me<a/>
+            </div>
         </div>
+
+        <section class="slide" id="about">
+            <p>
+              hi, i'm sanju.</br> </br>
+              i'm working on several projects, mostly things I've been scared to start for years.
+              </br></br>
+              they're listed below.
+           </p>
+        </section>
+        <section class="slide" id="sounds">
+
+        </section>
+        <section class="slide" id="cooking">
+
+        </section>
+        <section class="slide" id="fitness">
+
+        </section>
     </body>
 </html>
