--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div id="links">
                 <a href="www.twitter.com/sanjuashok">twitter<a/>|<a href="www.instagram.com/sanjuashok">instagram<a/>|<a href="www.github.com/sanjuashok">github<a/>|<a href="www.soundcloud.com/sanjuashok">soundcloud<a/>|<a href="http://blog.sanju.io">blog<a/>|<a href="mail:me@sanju.io">email me<a/>
             </div>
+            <button class="scroll"></button>
         </div>
 
         <section class="slide" id="about">
