--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id='header'>
             <h1 id='headtext'>the site of sanju ashok</h1>
             <div id="links">
-                <a href="www.twitter.com/sanjuashok">twitter<a/>|<a href="www.instagram.com/sanjuashok">instagram<a/>|<a href="www.github.com/sanjuashok">github<a/>|<a href="www.soundcloud.com/sanjuashok">soundcloud<a/>|<a href="http://blog.sanju.io">blog<a/>|<a href="mail:me@sanju.io">email me<a/>
+                <a href="http://www.twitter.com/sanjuashok">twitter<a/>|<a href="http://www.instagram.com/sanjuashok">instagram<a/>|<a href="http://www.github.com/sanjuashok">github<a/>|<a href="http://www.soundcloud.com/sanjuashok">soundcloud<a/>|<a href="http://blog.sanju.io">blog<a/>|<a href="mailto:me@sanju.io">email me<a/>
             </div>
             <button class="scroll"></button>
         </div>
