updating sanju.io to be more goodly

--- a/index.html
+++ b/index.html
@@ -2,39 +2,32 @@
     <head>
         <title>sanju ashok</title>
         <link rel = "stylesheet" type = "text/css" href = "css/styles.css" />
+        <link rel = "stylesheet" type = "text/css" href = "https://cdn.rawgit.com/novus/nvd3/v1.8.1/build/nv.d3.css" />
         <script
             src="https://code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
             crossorigin="anonymous">
         </script>
         <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+        <script src="https://d3js.org/d3.v4.min.js"></script>
+        <script src="https://cdn.rawgit.com/novus/nvd3/v1.8.1/build/nv.d3.min.js"></script>
         <script type="text/javascript" src="js/site.js"></script>
     </head>
     <body>
         <div id='header'>
             <h1 id='headtext'>the site of sanju ashok</h1>
             <div id="links">
-                <a href="http://www.twitter.com/sanjuashok">twitter<a/>|<a href="http://www.instagram.com/sanjuashok">instagram<a/>|<a href="http://www.github.com/sanjuashok">github<a/>|<a href="http://www.soundcloud.com/sanjuashok">soundcloud<a/>|<a href="http://blog.sanju.io">blog<a/>|<a href="mailto:me@sanju.io">email me<a/>
+                Hi, I'm Sanju. I'm working on a couple of different things right now. I run a vegan jerky company called <a href="https://tasteurga.com">Urga</a>.
+                I write a newsletter called <a href="https://plantindustrial.substack.com/">Plant Industrial</a> on Substack about food at scale and a little about my
+                experiences selling food. I did a creative writing class and I scrawl nonsense on the walls on my <a href="http://blog.sanju.io/">blog</a>.
+                I do collabs with my friend Nate at <a href="http://batvsdolphin.com/">Bat Vs. Dolphin</a>.
+                <br>
+                <br>
+                I used to be a software developer at Salesforce, and am looking for my next opportunity now. Reach out - me AT sanju DOT io.
+                <br>
+                <br>
+                Or follow me on the <a href="http://www.twitter.com/sanjuashok">twitter<a/>.
             </div>
-            <button class="scroll"></button>
         </div>
-
-        <section class="slide" id="about">
-            <p>
-              hi, i'm sanju.</br> </br>
-              i'm working on several projects, mostly things I've been scared to start for years.
-              </br></br>
-              they're listed below.
-           </p>
-        </section>
-        <section class="slide" id="sounds">
-
-        </section>
-        <section class="slide" id="cooking">
-
-        </section>
-        <section class="slide" id="fitness">
-
-        </section>
     </body>
 </html>
