--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <h1 id='headtext'>the site of sanju ashok</h1>
             <div id="links">
                 Hi, I'm Sanju. I'm working on a couple of different things right now. I run a vegan jerky company called <a href="https://tasteurga.com">Urga</a>.
-                I write a newsletter called <a href="https://plantindustrial.substack.com/">Plant Industrial</a> on Substack about food at scale and a little about my
-                experiences selling food. I did a creative writing class and I scrawl nonsense on the walls on my <a href="http://blog.sanju.io/">blog</a>.
+                I write a newsletter called <a href="https://plantindustrial.substack.com/">Plant Industrial</a> on Substack about food at scale (and a little about my
+                experiences selling food). I did a creative writing class and I scrawl the resulting nonsense on the walls on my <a href="http://blog.sanju.io/">blog</a>.
                 I do collabs with my friend Nate at <a href="http://batvsdolphin.com/">Bat Vs. Dolphin</a>.
                 <br>
                 <br>
