--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>sanju ashok</title>
         <link rel = "stylesheet" type = "text/css" href = "css/styles.css" />
         <link rel = "stylesheet" type = "text/css" href = "https://cdn.rawgit.com/novus/nvd3/v1.8.1/build/nv.d3.css" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script
             src="https://code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -14,7 +15,7 @@
         <script type="text/javascript" src="js/site.js"></script>
     </head>
     <body>
-        <div id='header'>
+        <div class='container' id='header'>
             <h1 id='headtext'>the site of sanju ashok</h1>
             <div id="links">
                 Hi, I'm Sanju. I'm working on a couple of different things right now. I ran a vegan jerky company called <a href="https://tasteurga.com">Urga</a>.
