--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <script type="text/javascript" src="js/site.js"></script>
     </head>
     <body>
-        <div class='container' id='header'>
+        <div class='container-fluid' id='header'>
             <h1 id='headtext'>the site of sanju ashok</h1>
             <div id="links">
                 Hi, I'm Sanju. I'm working on a couple of different things right now. I ran a vegan jerky company called <a href="https://tasteurga.com">Urga</a>.
