--- a/index.html
+++ b/index.html
@@ -15,19 +15,21 @@
         <script type="text/javascript" src="js/site.js"></script>
     </head>
     <body>
-        <div class='container-fluid' id='header'>
-            <h1 id='headtext'>the site of sanju ashok</h1>
-            <div id="links">
-                Hi, I'm Sanju. I'm working on a couple of different things right now. I ran a vegan jerky company called <a href="https://tasteurga.com">Urga</a>.
-                I write a newsletter called <a href="https://plantindustrial.substack.com/">Plant Industrial</a> on Substack about food at scale (and a little about my
-                experiences selling food). I did a creative writing class and I scrawl the resulting nonsense on the walls on my <a href="http://blog.sanju.io/">blog</a>.
-                I do collabs with my friend Nate at <a href="http://batvsdolphin.com/">Bat Vs. Dolphin</a>.
-                <br>
-                <br>
-                I'm a product manager at Datadog now. If you want to contact me, reach out - me AT sanju DOT io.
-                <br>
-                <br>
-                Or follow me on the <a href="http://www.twitter.com/sanjuashok">twitter<a/>.
+        <div class='container-fluid'>
+            <div class="jumbotron" id='header'>
+                <h1 id='headtext'>the site of sanju ashok</h1>
+                <div id="links">
+                    Hi, I'm Sanju. I'm working on a couple of different things right now. I ran a vegan jerky company called <a href="https://tasteurga.com">Urga</a>.
+                    I write a newsletter called <a href="https://plantindustrial.substack.com/">Plant Industrial</a> on Substack about food at scale (and a little about my
+                    experiences selling food). I did a creative writing class and I scrawl the resulting nonsense on the walls on my <a href="http://blog.sanju.io/">blog</a>.
+                    I do collabs with my friend Nate at <a href="http://batvsdolphin.com/">Bat Vs. Dolphin</a>.
+                    <br>
+                    <br>
+                    I'm a product manager at Datadog now. If you want to contact me, reach out - me AT sanju DOT io.
+                    <br>
+                    <br>
+                    Or follow me on the <a href="http://www.twitter.com/sanjuashok">twitter<a/>.
+                </div>
             </div>
         </div>
     </body>
