--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div class='container-fluid'>
-            <div class="jumbotron" id='header'>
+            <div id='header'>
                 <h1 id='headtext'>the site of sanju ashok</h1>
                 <div id="links">
                     Hi, I'm Sanju. I'm working on a couple of different things right now. I ran a vegan jerky company called <a href="https://tasteurga.com">Urga</a>.
